--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INFO do grau</title>
-    <h1>Pessoal gente boa/ruim</h1>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>Joao V - Curriculo</title>
+    <script src="assets/js/script.js"></script>
 </head>
-<body>
-    
+
+<body class="dark">
+    <button name="tema" onclick="mudarTema();">Mudar tema</button>
+    <header>
+        <nav>
+            <ul class="menu">
+                <li><a href="#sobre">Sobre Mim</a></li>
+                <li><a href="#projetos">Meus Projetos</a></li>
+                <li><a href="contatos">Meus Contatos</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <section id="sobre">
+        <div class="container">
+            <h1>Sobre Mim</h1>
+            <p>Olá meu nome é João V e sou um aluno do Senac</p>
+        </div>
+
+
+        <div class="container">
+
+            <h1>Joao Vitor Resin Nogueira</h1>
+            <h2>Artistas que gosto de ouvir:</h2>
+            <ul class="blocos">
+                <li>Mc Saci</li>
+                <li>DJ Betim</li>
+                <li>Slipknot</li>
+            </ul>
+        </div>
+    </section>
 </body>
+
 </html>
