--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body class="dark">
-    <button name="tema" onclick="mudarTema();">Mudar tema</button>
+    <button class="animated-button" onclick="mudarTema();">Mudar tema</button>
     <header>
         <nav>
             <ul class="menu">
                 <li><a href="#sobre">Sobre Mim</a></li>
                 <li><a href="#projetos">Meus Projetos</a></li>
-                <li><a href="contatos">Meus Contatos</a></li>
+                <li><a href="#contatos">Meus Contatos</a></li>
             </ul>
         </nav>
     </header>
